--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html" class="active">صفحه اصلی<br></a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html">مرامنامه</a></li>
           <li class="dropdown"><a href="gallery.html"><span>تصاویر</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
+            <!-- <ul>
               <li><a href="gallery.html">برنامه بعد</a></li>
               <li><a href="gallery.html">هیات اجرایی</a></li>
               <!-- <li><a href="gallery.html">Travel</a></li>
@@ -66,10 +66,10 @@
                   <li><a href="#">Deep Dropdown 5</a></li>
                 </ul>
               </li> -->
-            </ul>
+            </ul> -->
           </li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">تماس با ما</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -92,9 +92,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center" data-aos="fade-up" data-aos-delay="100">
-            <h2><span>I'm </span><span class="underlight">Jenny Wilson</span> a Professional<span> Photographer from New York City</span></h2>
-            <p>Blanditiis praesentium aliquam illum tempore incidunt debitis dolorem magni est deserunt sed qui libero. Qui voluptas amet.</p>
-            <a href="contact.html" class="btn-get-started">Available for Hire<br></a>
+            <h2><span> </span><span class="underlight">شب شعر هلیفکس</span> 
           </div>
         </div>
       </div>
